--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,11 @@
 
   <%= render "home/header" %>
   <div class="container">
+    <br/>
+    <% if notice %>
+      <%= render "layouts/alerts" %>
+    <% end %>
+
     <%= yield %>
   </div>
 
