--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,5 +1,6 @@
-<table class="table table-striped table-bordered table-hover">
-  <thead class="table-dark">
+<% if user_signed_in? %>
+  <table class="table table-striped table-bordered table-hover">
+    <thead class="table-dark">
     <tr>
       <th>First name</th>
       <th>Last name</th>
@@ -9,9 +10,9 @@
       <th>User Id</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+    </thead>
 
-  <tbody>
+    <tbody>
     <% @friends.each do |friend| %>
       <% if friend.user == current_user %>
         <tr>
@@ -27,9 +28,14 @@
         </tr>
       <% end %>
     <% end %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Friend', new_friend_path, class:"btn btn-secondary" %>
+  <%= link_to 'New Friend', new_friend_path, class:"btn btn-secondary" %>
+
+<% else %>
+  <h1>Hello World</h1>
+  This is my first web application ...
+<% end %>
